# LegalTech

./: .env.example  .gitignore  .pre-commit-config.yaml  PAGES_INVENTORY.md  README.md  docker-compose.yml  npm-workspace.yaml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.marscode/: deviceInfo.json
backend/: Dockerfile  mypy_precommit.ini  package.json  pyproject.toml
backend/apps/billing/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/billing/migrations/: 0001_initial.py  0002_initial.py
backend/apps/clients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py  0002_initial.py
backend/apps/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/documents/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/documents/migrations/: 0001_initial.py  0002_initial.py
backend/apps/investments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/investments/migrations/: 0001_initial.py  0002_initial.py
backend/apps/messaging/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/messaging/migrations/: 0001_initial.py  0002_initial.py
backend/apps/reporting/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/reporting/migrations/: 0001_initial.py  0002_initial.py
backend/apps/tax/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tax/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/backend/: asgi.py  urls.py
backend/backend/settings/: __init__.py  base.py  development.py  production.py
frontend/: Dockerfile  Dockerfile.dev  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AuthLayout.tsx  MainLayout.tsx  Navigation.tsx  PublicHeader.tsx  PublicLayout.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/auth/: ForgotPassword.tsx  Login.tsx  MFAVerify.tsx  Register.tsx
frontend/src/pages/billing/: Billing.tsx
frontend/src/pages/clients/: ClientDetail.tsx  Clients.tsx  ClientsList.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/documents/: Documents.tsx
frontend/src/pages/investments/: Investments.tsx
frontend/src/pages/messaging/: Messages.tsx
frontend/src/pages/public/: AboutUs.tsx  ContactUs.tsx  Home.tsx  PrivacyPolicy.tsx  Services.tsx  TermsOfService.tsx
frontend/src/pages/reporting/: Reports.tsx
frontend/src/pages/settings/: Settings.tsx
frontend/src/pages/tax/: Tax.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
